v17.1/7.公式引用/0.公式概述/1.公式中的单元格引用.md
# cellreferences

公式可以引用常量值或单元格引用。 如果任何引用的单元格中的值发生变更，则公式的结果将变更。 如果您在公式中使用常量值而不是对单元格的引用，则仅当您修改公式（或公式中的值）时，结果才会变更。
使用 SpreadJS, 您可以使用将特定的单元格范围转换为公式字符串 **formulaToRanges()** 方法。 例如-从行号和列号返回“ A1”地址。
有关在公式中使用单元格引用的更多信息，请参阅 **单元格引用的示例代码** 。
如果在公式中的单元格区域之前或之后添加新行，则该范围不包括新行。
以下主题描述了不同的标记样式和引用类型：

* [A1 表示法](about:blank#a)
* [R1C1 表示法](about:blank#b)
* [相对和绝对](about:blank#c)

### A1 表示法

每个单元格可以通过其列字母（A到Z，然后AA到ZZ，AAA到ZZZ，等等）和行号（1或更大）的组合来引用，总共2147483483648行和列。 例如，D50指的是D列和第50行的交点处的单元格。要引用某个单元格范围，请在该范围的左上角输入该单元格的引用，并输入冒号（:)，然后 范围右下角对单元格的引用。

### R1C1 表示法

每个单元格可以通过其行和列编号来引用，方法是在每个行之前加上字母“ R”（对于行）和字母“ C”（对于列）。 例如，R1C3是第一行和第三列中的单元格。

| A1 Cell Ref. | R1C1 Cell Ref. | 描述 |
| ------------ | -------------- | --- |
| B12 | R12C2 | 第二列（B列）和第十二行（第12行）中的单元格 |
| D14:D48 | R14C4:R48C4 | 第四列（D列）和第14至48行中的单元格范围 |
| E16:H16 | R16C5:R16C8 | 第五列至第八列（E列至H列）第十六行（第16行）中的单元格范围 |
| A25:E70 | R25C1:R70C5 | 前五列（第A到E列）和第25到70行的单元格范围 |

### 相对和绝对

相对单元格引用是相对于具有公式的单元格位置的单元格引用。 绝对引用是一种单元格引用，它始终通过其在图纸中的确切位置来引用单元格，而不是引用当前单元格。
相对引用在复制时会自动调整，而绝对引用则不会。 小部件可以使用绝对或相对单元格引用。 您可以使用ReferenceStyle属性为每个表单定义单元格引用样式。 该公式不支持同时包含绝对和相对行或列引用的范围引用。 换句话说，范围引用中的开始行和结束行必须匹配（绝对值或相对值都必须匹配）。 下表包含公式中有效相对单元格引用的示例。

| 函数 | 描述 |
| --- | --- |
| SUM(A1:A10) | 对第一列中的1至10行求和 |
| PI( )\*C6 | 将pi乘以单元格C6中的值 |
| (A1 + B1) \* C1 | 将前两个单元格中的值相加，然后将结果与第三个单元格中的值相乘 |
| IF(A1>5, A1*2, A1*3) | 检查单元格A1的内容是否大于5，如果是，则将单元格A1的内容乘以2，否则将单元格A1的内容乘以3 |

对于A1表示法，请在行或列（或两者）之前使用美元符号（$）表示绝对引用。 例如

| $A$1 | 绝对第一列，绝对第一行 |
| ---- | ----------- |
| $A1 | 第一列绝对值，相对行加一 |
| A$1 | 相对列加一，绝对第一行 |
| A1 | 相对列加一，相对行加一 |

对于R1C1表示法，请在行号或列号（或两者）前后使用方括号[]表示相对引用。 例如

| R1C1 | 绝对第一行，绝对第一列 |
| ---- | ----------- |
| R1C[1] | 绝对第一行，相对列加一 |
| R[1]C1 | 相对行加一，绝对第一列 |
| R[1]C[1] | 相对行加一，相对列加一 |
| R[-1]C[-1] | 相对行减一，相对列减一 |

在此符号中，括号内的数字是当前单元格的偏移量。 此数字可以是负数或正整数或零。 完全消除偏移量是指示零偏移量的简便方法。 所以，

* RC2等效于R [0] C2
* R[3]C等效于R [3] C [0]

### 动态引用

SpreadJS 提供了 **dynamicReferences** 标志，用于在使用与计算相关的公式函数时实现最小的内存占用和更好的性能。启用此标志后，跨工作表使用公式函数的计算过程将变得更快。
**dynamicReferences** 标志接受布尔值，用于启用或禁用 CalcEngine 的动态引用模式。这有助于提高诸如 **IF**、**CHOOSE**、**SUMIF**、**SUMIFS**、**AVERAGEIF**、**AVERAGEIFS**、**MAXIFS**、**MINIFS**、**COUNTIFS**、**VLOOKUP** 和 **HLOOKUP** 等公式函数的性能。
默认情况下，**dynamicReferences** 标志的值为 `true`。如果需要进一步提高计算性能，可以将该标志设置为 `false`。
**注意**：需要在设置公式或调用 `fromJSON` 方法之前设置 **dynamicReferences** 标志。
以下代码片段展示了当 **dynamicReferences** 选项设置为 `false` 或 `true` 时，循环引用的行为如何受到影响。

```javascript
spread.options.dynamicReferences = false;
spread.options.iterativeCalculation = false;
sheet.setFormula(0, 1, '=SUMIF(A:A,"a*",B:B)');
sheet.setValue(1, 0, "aaa");
sheet.setValue(1, 1, 123); // Here, formula B1 result won't change. Because B1 have listener of A:A, B:B, it's circular reference and iterativeCalculation is false.

spread.options.dynamicReferences = true;
spread.options.iterativeCalculation = false;
sheet.setFormula(0, 1, '=SUMIF(A:A,"a*",B:B)');
sheet.setValue(1, 0, "aaa");
sheet.setValue(1, 1, 123); // Here, formula B1 result will change. Because B1 have listener of A:A, B2, not B:B, it's not circular reference, can calculate when the iterativeCalculation is false
```